add variables to fetch

--- a/movie-app/src/assets/styles/CardContiner.css
+++ b/movie-app/src/assets/styles/CardContiner.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    min-width: 1098px;
+    max-width: 1400px;
     gap:80px;
     background-color: #F5F5F5;
     padding:56px 0px;
