--- a/movie-app/src/assets/styles/CardOverview.css
+++ b/movie-app/src/assets/styles/CardOverview.css
@@ -23,7 +23,9 @@ padding-top: 25px;
     background-color: #000000;
     border: 2.5px solid #FFFFFF;
     border-radius: 15px;
-    font-size: 23.5px;
+    font-size:20px;
+    font-weight: 600;
+    
 
 }
 .divVector{
