--- a/movie-app/src/assets/styles/Card.css
+++ b/movie-app/src/assets/styles/Card.css
@@ -8,4 +8,12 @@
     height: 100%;
     border-radius: 20px;
     background-position:center;
+    cursor: pointer; 
+    /*transition: background-size .4s;*/
+   
 }
+
+/*.imgContiner:hover{
+    
+}*/
+
