--- a/movie-app/src/assets/styles/Movie.css
+++ b/movie-app/src/assets/styles/Movie.css
@@ -5,22 +5,27 @@
 
 }
 .imgDetails{
- height: 711px;
- width: 565px;
- 
+ padding-top: 8px;
+ padding-bottom:8px;
+ height: 580px;;
 }
+
 .ditails{
    font-family: sans-serif;
+   padding-left: 42px;
+   width: 55%;
+
 }
 .overview{
 color:#4B4B4B ;
 font-size: 17px;
+line-height: 180% ;
 }
 
 .ditails h1{
     font-weight: 600;
     font-size: 48px;
-    color:#1C1C1CD9 ;
+    color:#1C1C1CD9;
 }
 .genres{
  display: flex;
@@ -37,7 +42,7 @@ font-size: 17px;
 .ditails p{
     color: #4B4B4B;
     font-size: 17px;
-    margin-top: 12px;
+    margin-top: 20px;
 }
 .spoken_languages{
     display: flex;
@@ -50,4 +55,21 @@ font-size: 17px;
     background-color:#66CCCC;
     border-radius: 5px;
 }
+.revenue,.release_date,.runtime,.vote_average{
+    font-weight: 600;
+}
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
+.button{
+border: none; 
+background: none;
+margin-top: 24px;    
+}
+
+            
